--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
         <div class="highlights-container">
             <div class="highlights-grid">
                 <div class="highlights-card" onclick="openPopup('residential')">
-                    <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6" alt="Residential Builds">
+<!--                    <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6" alt="Residential Builds">-->
+                    <img src="./assets/images/04_Outside.jpg" alt="Residential Builds">
                     <h3>Residential Builds</h3>
                     <p>Custom homes fitted to your style.</p>
                 </div>
