--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
             </p>
             <button class="cta-button" id="learnMore">Learn More</button>
         </div>
+        <div class="video-container">
+            <video autoplay loop muted playsinline>
+                <source src="./assets/images/homevideo.mp4" type="video/mp4">
+            </video>
+        </div>
 <!--        <div class="video-container">-->
-<!--            <video autoplay loop muted playsinline>-->
+<!--            <video autoplay loop playsinline controls>-->
 <!--                <source src="./assets/images/zebracontractors.mp4" type="video/mp4">-->
 <!--            </video>-->
 <!--        </div>-->
-        <div class="video-container">
-            <video autoplay loop playsinline controls>
-                <source src="./assets/images/zebracontractors.mp4" type="video/mp4">
-            </video>
-        </div>
         
     </section>
 
