--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 <!--                    <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6" alt="Residential Builds">-->
                     <img src="./assets/images/04_Outside.jpg" alt="Residential Builds">
                     <h3>Residential Builds</h3>
+                    <img src=".assets/images/homeentrance.jpg" alt="inside images">
                     <p>Custom homes fitted to your style.</p>
                 </div>
     
